Revision history for Mojolicious-Plugin-AssetPack

0.33
       * Merged Mojolicious::Plugin::Browserify

0.32     Thu Dec 18 12:23:58 2014
       * Add logging of JavaScript code to console on error
       * Able to pass on attrs to script/link tag generator #33

0.31     Thu Oct  9 13:19:44 2014
       * Fixed and wrote tests for external AssetPack plugins

0.30     Wed Oct  8 21:55:37 2014
       * Processed assets can be other places than out_dir()

0.29     Wed Oct  8 20:53:32 2014
       * Improved error message when unable to find external preprocessor
         (regression)

0.28     Tue Oct  7 23:58:45 2014
       * Add support for %= asset "foo.js", { inline => 1 }
       * Will also generate asset files with md5 from single files
       * Remove expand()
       * Remove rebuild()

0.27     Tue Oct  7 00:28:39 2014
       * Fix t/google-font.t

0.26     Tue Oct  7 00:16:27 2014
       * Generate a different checksum when unable to process input files
       * Replaced "/Mojolicious/Plugin/AssetPack/could/not/compile/..."
         with an actual asset using Preprocessor::Fallback

0.25     Mon Oct  6 16:28:59 2014
       * Preprocessors are added on the fly
       * Deprecated "no_autodetect"
       * Improved documentation

0.24     Sun Sep 28 20:44:00 2014
       * Add preprocessor classes for every detected preprocessor
       * Add Preprocessors->can_process method to detect if preprocessors exists
       * Improved error message from sass preprocessor

0.23     Sun Sep  7 18:20:35 2014
       * Add AssetPack->fetch() method #24
       * Can calculate checksum with included .sass and .scss files #25
       * Can load external assets with minify=0 #27
       * Support printing sass error to web page #26
       * Better error message when unable to find asset file
       * Change to using objects for processing files

0.22     Thu Aug 21 15:08:56 2014
       * Made compass test more robust

0.21     Thu Aug  7 21:33:48 2014